Made changes to quiz logic and UI

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
   <!-- Main Content -->
   <div class="main-content">
     <img src="https://iksindia.org/images/ikslogo.png" alt="IKS Logo" />
-    <h1>Indian Knowledge System (IKS) Practice</h1>
-    <p>Explore and practice multiple-choice questions from the rich heritage of Indian philosophy, science, medicine, and arts.</p>
+    <h1>Indian Knowledge System</h1>
     <button class="btn" onclick="location.href='quiz-template.html'">Start Practice</button>
   </div>
 
