Added code updates

--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>by Rk | © 2023 IKS MCQ</p>
+      <p>by RAVI KUMAR</p>
+      <p><a href="https://www.linkedin.com/in/ravi-kumar-549342333?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Linkedin</a></p>
     </div>
   </footer>
 
