--- a/quiz-template.html
+++ b/quiz-template.html
@@ -438,7 +438,8 @@
 
   <footer>
     <div class="container">
-      <p>by Rk</p>
+      <p>by RAVI KUMAR</p>
+      <p><a href="https://www.linkedin.com/in/ravi-kumar-549342333?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Linkedin</a></p>
     </div>
   </footer>
 
