Added code updates

--- a/quiz-template.html
+++ b/quiz-template.html
@@ -166,6 +166,14 @@
     .option:disabled {
       opacity: 1;
     }
+    .option.correct {
+      color: rgb(20, 212, 29);
+    }
+
+    .option.incorrect {
+      color: rgb(177, 20, 20);
+    }
+
 
     /* Navigation Buttons */
     .nav-buttons {
